fixed bleeding

--- a/media-queries/media-info.css
+++ b/media-queries/media-info.css
@@ -1,7 +1,8 @@
 @media only screen and (min-width: 1024px) {
   .info-section {
     margin: 0;
-    margin-top: 5%;
+    /* margin-top: 5%; */
+    padding: 0;
   }
   .what-is {
     left: 45%;
