--- a/style/global.css
+++ b/style/global.css
@@ -18,7 +18,6 @@
   box-sizing: border-box;
 }
 body {
-  width: 100vw;
   background-color: var(--bg-color);
   margin: 0px;
   padding: 0px;
