--- a/style/info-section.css
+++ b/style/info-section.css
@@ -1,5 +1,5 @@
 .info-section {
-  margin: 0px 5% 0px 5%;
+  padding: 0 5% 0 5%;
   position: relative;
 }
 .info-content {
