--- a/style/lab-section.css
+++ b/style/lab-section.css
@@ -1,6 +1,7 @@
 .lab-section {
-  margin: 10% 5% 0 5%;
+  padding: 0 5% 0 5%;
   position: relative;
+  margin-top: 10%;
 }
 
 .lab-image img {
