--- a/style/story-section.css
+++ b/style/story-section.css
@@ -1,6 +1,7 @@
 .story-section {
-  margin: 10% 5% 0 5%;
+  padding: 0 5% 0 5%;
   position: relative;
+  margin-top: 10%;
 }
 
 .story-image img {
